fix(messaging-sqs): exclude optional aws sdk dependency

--- a/quarkus-messaging-amazon-sqs/runtime/pom.xml
+++ b/quarkus-messaging-amazon-sqs/runtime/pom.xml
@@ -21,9 +21,18 @@
             <groupId>io.smallrye.reactive</groupId>
             <artifactId>smallrye-reactive-messaging-aws-sqs</artifactId>
             <exclusions>
+                <!-- we exclude them here because we want to make them optional -->
                 <exclusion>
                     <groupId>software.amazon.awssdk</groupId>
                     <artifactId>netty-nio-client</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>software.amazon.awssdk</groupId>
+                    <artifactId>url-connection-client</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>software.amazon.awssdk</groupId>
+                    <artifactId>apache-client</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
