--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
     <module>dynamodb</module>
     <module>dynamodb-enhanced</module>
     <module>ecr</module>
+    <module>elasticloadbalancing</module>
+    <module>elasticloadbalancingv2</module>
     <module>eventbridge</module>
     <module>iam</module>
     <module>inspector</module>
