--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
     <module>iam</module>
     <module>inspector</module>
     <module>inspector2</module>
+    <module>iot</module>
     <module>kinesis</module>
     <module>kms</module>
     <module>lambda</module>
