--- a/integration-tests/src/main/resources/application.properties
+++ b/integration-tests/src/main/resources/application.properties
@@ -21,6 +21,7 @@ quarkus.kinesis.sync-client.type=${sync-client.type}
 quarkus.kms.sync-client.type=${sync-client.type}
 quarkus.lambda.sync-client.type=${sync-client.type}
 quarkus.s3.sync-client.type=${sync-client.type}
+quarkus.eventbridge-scheduler.sync-client.type=${sync-client.type}
 quarkus.secretsmanager.sync-client.type=${sync-client.type}
 quarkus.ses.sync-client.type=${sync-client.type}
 quarkus.sns.sync-client.type=${sync-client.type}
@@ -39,6 +40,7 @@ quarkus.kinesis.async-client.type=${async-client.type}
 quarkus.kms.async-client.type=${async-client.type}
 quarkus.lambda.async-client.type=${async-client.type}
 quarkus.s3.async-client.type=${async-client.type}
+quarkus.eventbridge-scheduler.async-client.type=${async-client.type}
 quarkus.secretsmanager.async-client.type=${async-client.type}
 quarkus.ses.async-client.type=${async-client.type}
 quarkus.sfn.async-client.type=${async-client.type}
