--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -78,6 +78,10 @@
         </dependency>
         <dependency>
             <groupId>io.quarkiverse.amazonservices</groupId>
+            <artifactId>quarkus-amazon-scheduler</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkiverse.amazonservices</groupId>
             <artifactId>quarkus-amazon-secretsmanager</artifactId>
         </dependency>
         <dependency>
