feat: Add bedrock services (#1623)
* feat: Add bedrock services

* feat: Adjustments after review

* chore: add missing quarkus extension description files

---------

Co-authored-by: Sébastien Crocquesel <88554524+scrocquesel@users.noreply.github.com>

--- a/devservices/pom.xml
+++ b/devservices/pom.xml
@@ -18,6 +18,8 @@
     <packaging>pom</packaging>
     <modules>
         <module>acm</module>
+        <module>bedrock</module>
+        <module>bedrockruntime</module>
         <module>cognito-user-pools</module>
         <module>cloudwatch</module>
         <module>cloudwatchlogs</module>
