--- a/integration-tests/src/main/resources/application.properties
+++ b/integration-tests/src/main/resources/application.properties
@@ -11,6 +11,8 @@ quarkus.s3.interceptors=io.quarkiverse.it.amazon.s3.S3ModifyResponse
 quarkus.dynamodbenhanced.client-extensions=software.amazon.awssdk.enhanced.dynamodb.extensions.VersionedRecordExtension,io.quarkiverse.it.amazon.dynamodb.enhanced.MyExtension
 
 quarkus.acm.sync-client.type=${sync-client.type}
+quarkus.bedrock.sync-client.type=${sync-client.type}
+quarkus.bedrockruntime.sync-client.type=${sync-client.type}
 quarkus.cloudwatch.sync-client.type=${sync-client.type}
 quarkus.cloudwatchlogs.sync-client.type=${sync-client.type}
 quarkus.cognito-user-pools.sync-client.type=${sync-client.type}
@@ -30,6 +32,8 @@ quarkus.ssm.sync-client.type=${sync-client.type}
 quarkus.sts.sync-client.type=${sync-client.type}
 quarkus.sfn.sync-client.type=${sync-client.type}
 quarkus.acm.async-client.type=${async-client.type}
+quarkus.bedrock.async-client.type=${async-client.type}
+quarkus.bedrockruntime.async-client.type=${async-client.type}
 quarkus.cloudwatch.async-client.type=${async-client.type}
 quarkus.cloudwatchlogs.async-client.type=${async-client.type}
 quarkus.cognito-user-pools.async-client.type=${async-client.type}
