--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
     <module>devservices</module>
     <module>acm</module>
     <module>apigatewaymanagementapi</module>
+    <module>bedrock</module>
+    <module>bedrockruntime</module>
     <module>cloudwatch</module>
     <module>cloudwatchlogs</module>
     <module>cognito-user-pools</module>
