--- a/integration-tests/src/main/resources/application.properties
+++ b/integration-tests/src/main/resources/application.properties
@@ -6,7 +6,7 @@ quarkus.aws.devservices.moto.image-name=motoserver/moto:3.0.2
 
 quarkus.s3.devservices.buckets=quarkus.test.bucket
 
-quarkus.dynamodb.interceptors=io.quarkiverse.it.amazon.dynamodb.DynamoDBModifyResponse
+#quarkus.dynamodb.interceptors=io.quarkiverse.it.amazon.dynamodb.DynamoDBModifyResponse
 quarkus.s3.interceptors=io.quarkiverse.it.amazon.s3.S3ModifyResponse
 quarkus.dynamodbenhanced.client-extensions=software.amazon.awssdk.enhanced.dynamodb.extensions.VersionedRecordExtension,io.quarkiverse.it.amazon.dynamodb.enhanced.MyExtension
 
