--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -96,6 +96,10 @@
             <groupId>io.quarkiverse.amazonservices</groupId>
             <artifactId>quarkus-amazon-ses</artifactId>
         </dependency>
+                <dependency>
+            <groupId>io.quarkiverse.amazonservices</groupId>
+            <artifactId>quarkus-amazon-sesv2</artifactId>
+        </dependency>
         <dependency>
             <groupId>io.quarkiverse.amazonservices</groupId>
             <artifactId>quarkus-amazon-sfn</artifactId>
