--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
     <module>scheduler</module>
     <module>secretsmanager</module>
     <module>ses</module>
+    <module>sesv2</module>
     <module>sfn</module>
     <module>sns</module>
     <module>sqs</module>
