--- a/services/rds/runtime/pom.xml
+++ b/services/rds/runtime/pom.xml
@@ -74,6 +74,10 @@
             <groupId>org.jboss.logging</groupId>
             <artifactId>commons-logging-jboss-logging</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-credentials</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
