--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -422,6 +422,11 @@
             </dependency>
             <dependency>
                 <groupId>io.quarkiverse.amazonservices</groupId>
+                <artifactId>quarkus-amazon-devservices-rds</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkiverse.amazonservices</groupId>
                 <artifactId>quarkus-amazon-rds</artifactId>
                 <version>${project.version}</version>
             </dependency>
