feat: add textract extension

--- a/services/pom.xml
+++ b/services/pom.xml
@@ -50,6 +50,7 @@
         <module>ssooidc</module>
         <module>ssm</module>
         <module>sts</module>
+        <module>textract</module>
     </modules>
 
     <build>
