--- a/services/pom.xml
+++ b/services/pom.xml
@@ -40,6 +40,7 @@
         <module>paymentcryptography</module>
         <module>paymentcryptographydata</module>
         <module>rds</module>
+        <module>rekognition</module>
         <module>rdsdata</module>
         <module>secretsmanager</module>
         <module>ses</module>
