chore: pr review

--- a/services/rekognition/src/main/resources/codegen-resources/customization.config
+++ b/services/rekognition/src/main/resources/codegen-resources/customization.config
@@ -1,84 +1,11 @@
 {
     "verifiedSimpleMethods": [
-        "compareFaces",
-        "copyProjectVersion",
-        "createCollection",
-        "createDataset",
-        "createProject",
-        "createProjectVersion",
-        "createStreamProcessor",
-        "deleteCollection",
-        "deleteDataset",
-        "deleteFaces",
-        "deleteProject",
-        "deleteProjectPolicy",
-        "deleteProjectVersion",
-        "deleteStreamProcessor",
-        "describeCollection",
-        "describeDataset",
-        "describeProjectVersions",
-        "describeProjects",
-        "describeStreamProcessor",
-        "detectCustomLabels",
-        "detectFaces",
-        "detectLabels",
-        "detectModerationLabels",
-        "detectProtectiveEquipment",
-        "detectText",
-        "distributeDatasetEntries",
-        "getCelebrityInfo",
-        "getCelebrityRecognition",
-        "getContentModeration",
-        "getFaceDetection",
-        "getFaceSearch",
-        "getLabelDetection",
-        "getPersonTracking",
-        "getSegmentDetection",
-        "getTextDetection",
-        "indexFaces",
         "listCollections",
-        "listDatasetEntries",
-        "listDatasetLabels",
-        "listFaces",
-        "listProjectPolicies",
-        "listStreamProcessors",
-        "listTagsForResource",
-        "putProjectPolicy",
-        "recognizeCelebrities",
-        "searchFaces",
-        "searchFacesByImage",
-        "startCelebrityRecognition",
-        "startContentModeration",
-        "startFaceDetection",
-        "startFaceSearch",
-        "startLabelDetection",
-        "startPersonTracking",
-        "startProjectVersion",
-        "startSegmentDetection",
-        "startStreamProcessor",
-        "startTextDetection",
-        "stopProjectVersion",
-        "stopStreamProcessor",
-        "tagResource",
-        "untagResource",
-        "updateDatasetEntries",
-        "updateStreamProcessor"
+        "listStreamProcessors"
     ],
-    "shapeModifiers": {
-        "AddPermissionInput": {
-            "modify": [
-                {
-                    "AWSAccountId": {
-                        "emitPropertyName": "AWSAccountIds"
-                    },
-                    "ActionName": {
-                        "emitPropertyName": "ActionNames"
-                    }
-                }
-            ]
-        }
-    },
-
+    "excludedSimpleMethods": [
+        "describeTableRestoreStatus",
+        "describeClusterSecurityGroups"
+    ],
     "enableGenerateCompiledEndpointRules": true
-
 }
