--- a/integration-tests/src/main/resources/application.properties
+++ b/integration-tests/src/main/resources/application.properties
@@ -14,6 +14,7 @@ quarkus.dynamodbenhanced.client-extensions=\
   io.quarkiverse.it.amazon.dynamodb.enhanced.MyExtension
 
 quarkus.acm.sync-client.type=${sync-client.type}
+quarkus.apigateway.sync-client.type=${sync-client.type}
 quarkus.bedrock.sync-client.type=${sync-client.type}
 quarkus.bedrockruntime.sync-client.type=${sync-client.type}
 quarkus.cloudwatch.sync-client.type=${sync-client.type}
@@ -35,6 +36,7 @@ quarkus.ssm.sync-client.type=${sync-client.type}
 quarkus.sts.sync-client.type=${sync-client.type}
 quarkus.sfn.sync-client.type=${sync-client.type}
 quarkus.acm.async-client.type=${async-client.type}
+quarkus.apigateway.async-client.type=${async-client.type}
 quarkus.bedrock.async-client.type=${async-client.type}
 quarkus.bedrockruntime.async-client.type=${async-client.type}
 quarkus.cloudwatch.async-client.type=${async-client.type}
