--- a/services/apigateway/deployment/pom.xml
+++ b/services/apigateway/deployment/pom.xml
@@ -28,6 +28,10 @@
             <groupId>io.quarkiverse.amazonservices</groupId>
             <artifactId>quarkus-amazon-apigateway</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.quarkiverse.amazonservices</groupId>
+            <artifactId>quarkus-amazon-devservices-apigateway</artifactId>
+        </dependency>
 
         <!-- Test dependencies -->
         <dependency>
