--- a/integration-tests/src/main/resources/application.properties
+++ b/integration-tests/src/main/resources/application.properties
@@ -2,6 +2,7 @@ quarkus.http.test-timeout=1m
 
 quarkus.aws.devservices.localstack.container-properties."START_WEB"=0
 quarkus.aws.devservices.localstack.additional-services.redshift.enabled=true
+quarkus.aws.devservices.localstack.image-name=localstack/localstack:4.7.0
 quarkus.aws.devservices.moto.image-name=motoserver/moto:3.0.2
 
 quarkus.s3.devservices.buckets=quarkus.test.bucket
@@ -26,6 +27,7 @@ quarkus.iam.sync-client.type=${sync-client.type}
 quarkus.kinesis.sync-client.type=${sync-client.type}
 quarkus.kms.sync-client.type=${sync-client.type}
 quarkus.lambda.sync-client.type=${sync-client.type}
+quarkus.resourcegroupstaggingapi.sync-client.type=${sync-client.type}
 quarkus.s3.sync-client.type=${sync-client.type}
 quarkus.eventbridge-scheduler.sync-client.type=${sync-client.type}
 quarkus.secretsmanager.sync-client.type=${sync-client.type}
@@ -35,6 +37,7 @@ quarkus.sqs.sync-client.type=${sync-client.type}
 quarkus.ssm.sync-client.type=${sync-client.type}
 quarkus.sts.sync-client.type=${sync-client.type}
 quarkus.sfn.sync-client.type=${sync-client.type}
+
 quarkus.acm.async-client.type=${async-client.type}
 quarkus.apigateway.async-client.type=${async-client.type}
 quarkus.bedrock.async-client.type=${async-client.type}
@@ -48,6 +51,7 @@ quarkus.iam.async-client.type=${async-client.type}
 quarkus.kinesis.async-client.type=${async-client.type}
 quarkus.kms.async-client.type=${async-client.type}
 quarkus.lambda.async-client.type=${async-client.type}
+quarkus.resourcegroupstaggingapi.async-client.type=${async-client.type}
 quarkus.s3.async-client.type=${async-client.type}
 quarkus.eventbridge-scheduler.async-client.type=${async-client.type}
 quarkus.secretsmanager.async-client.type=${async-client.type}
