--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -86,6 +86,10 @@
         </dependency>
         <dependency>
             <groupId>io.quarkiverse.amazonservices</groupId>
+            <artifactId>quarkus-amazon-resourcegroupstaggingapi</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkiverse.amazonservices</groupId>
             <artifactId>quarkus-amazon-s3</artifactId>
         </dependency>
         <dependency>
