--- a/common/deployment-devservices-spi/pom.xml
+++ b/common/deployment-devservices-spi/pom.xml
@@ -31,7 +31,7 @@
         </dependency>
         <dependency>
             <groupId>org.testcontainers</groupId>
-            <artifactId>localstack</artifactId>
+            <artifactId>testcontainers-localstack</artifactId>
         </dependency>
     </dependencies>
 
