feat: add appconfig extension

--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -177,6 +177,16 @@
             </dependency>
             <dependency>
                 <groupId>io.quarkiverse.amazonservices</groupId>
+                <artifactId>quarkus-amazon-appconfig</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkiverse.amazonservices</groupId>
+                <artifactId>quarkus-amazon-appconfig-deployment</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkiverse.amazonservices</groupId>
                 <artifactId>quarkus-amazon-devservices-bedrock</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -705,7 +715,6 @@
                 <artifactId>quarkus-amazon-transfer-deployment</artifactId>
                 <version>${project.version}</version>
             </dependency>
-
         </dependencies>
     </dependencyManagement>
 </project>
